PV Minh: add forgot password using mailjet to send mail( using jwt)

--- a/src/views/forgotpassword.hbs
+++ b/src/views/forgotpassword.hbs
@@ -5,12 +5,16 @@
         
         <!-- Heading -->
         <h1 class="mb-2 text-xl font-bold">Forgot password</h1>
-
+        {{#if done}}
+        <p class="mb-4 opacity-40">An email has been sent to your email. Please follow the instructtion in that eamil to reset your password. </p>
+        {{else}}
         <p class="mb-4 opacity-40">Enter your email address and we'll send you a link to reset your password.
         </p>
+        {{/if}}
 
+        {{#unless done}}
         <!-- Form -->
-        <form class="flex flex-col gap-2" method="POST" action="">
+        <form class="flex flex-col gap-2" method="POST" action="/forgot">
             <!-- Email Input -->
 
             <div>
@@ -24,31 +28,32 @@
                     required
                 >
             </div>
-            
 
+            {{#if message}}
+            <div class="flex justify-start">
+                <small class="text-left text-red-600" style="text-indent: 1rem;">{{{message}}}</small>
+            </div>   
+            {{/if}}
             <!-- Submit Button -->
-            <button id="sendBtn" type="button"
+            <button id="send-button" type="submit"
                 class="w-full p-4 font-medium text-white bg-black text-opacity-40 rounded-2xl"
-                onclick="window.location.href='/resetPassword'">
+                >
                 Send a reset link
             </button>
         </form>
-
-
         <!-- Or divider -->
         <div class="flex items-center py-5 mt-4">
             <hr class="flex-grow">
             <small class="mx-2 opacity-40 ">Remembered password</small>
             <hr class="flex-grow">
         </div>
-
-
         <!-- Login Redirect -->
         <button id="loginBtn" type="button"
                 class="w-full p-4 font-medium text-white bg-black rounded-2xl"
                 onclick="window.location.href='/login'">
                 Log in
         </button>
+        {{/unless}}
     </div>
 </div>
 
@@ -66,9 +71,9 @@
         input.addEventListener('input', () => {
             const allFilled = Array.from(document.querySelectorAll('.form-control')).every(input => input.value);
             if (allFilled) {
-                document.getElementById('login-button').classList.remove('text-opacity-40');
+                document.getElementById('send-button').classList.remove('text-opacity-40');
             } else {
-                document.getElementById('login-button').classList.add('text-opacity-40');
+                document.getElementById('send-button').classList.add('text-opacity-40');
             }
         });
     });
