--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -38,7 +38,7 @@
         </form>
 
         <div class="my-2 text-center ">
-            <a href="/forgot-password" class="opacity-40"><small>Forgot password?</small></a>
+            <a href="/forgot" class="opacity-40"><small>Forgot password?</small></a>
         </div>
 
         <!-- Or divider -->
