--- a/src/views/resetpassword.hbs
+++ b/src/views/resetpassword.hbs
@@ -9,7 +9,7 @@
         <p class="mb-4 opacity-40">Enter your new password.</p>
 
         <!-- Form -->
-        <form id="resetPasswordForm" class="flex flex-col gap-2" method="POST" action="#" onsubmit="process(event)">
+        <form id="resetPasswordForm" class="flex flex-col gap-2" method="POST" action="/reset">
             
             <div>
                 <label for="password" class="sr-only form-lable">Password</label>
@@ -35,8 +35,15 @@
                 <label class="form-check-label opacity-40" for="showPassword">Show Passwords</label>
             </div>
 
+            {{#if message}}
+            <div class="flex justify-start">
+                <small class="text-left text-red-600" style="text-indent: 1rem;">{{{message}}}</small>
+            </div>   
+            {{/if}}
+            <input type="hidden" name="email" value="{{email}}">
+            <input type="hidden" name="token" value="{{token}}">
             <!-- Submit Button -->
-            <button id="UpdateBtn" type="submit"
+            <button id="update-button" type="submit"
                 class="w-full p-4 font-medium text-white bg-black text-opacity-40 rounded-2xl"
                 >
                 Update
@@ -76,9 +83,9 @@
         input.addEventListener('input', () => {
             const allFilled = Array.from(document.querySelectorAll('.form-control')).every(input => input.value);
             if (allFilled) {
-                document.getElementById('send-button').classList.remove('text-opacity-40');
+                document.getElementById('update-button').classList.remove('text-opacity-40');
             } else {
-                document.getElementById('send-button').classList.add('text-opacity-40');
+                document.getElementById('update-button').classList.add('text-opacity-40');
             }
         });
     });
