PV Minh: add reset password. handle check validate forgotpassword in server, add show password

--- a/src/views/forgotpassword.hbs
+++ b/src/views/forgotpassword.hbs
@@ -29,9 +29,9 @@
                 >
             </div>
 
-            {{#if message}}
+            {{#if forgotMessage}}
             <div class="flex justify-start">
-                <small class="text-left text-red-600" style="text-indent: 1rem;">{{{message}}}</small>
+                <small class="text-left text-red-600" style="text-indent: 1rem;">{{{forgotMessage}}}</small>
             </div>   
             {{/if}}
             <!-- Submit Button -->
