--- a/src/views/resetpassword.hbs
+++ b/src/views/resetpassword.hbs
@@ -2,53 +2,55 @@
     <!-- Logo -->
     <a href="/index"><i class="fa-brands fa-threads fa-3x"></i></a>
     <div class="text-center w-full max-w-[386px] sm-custom:max-w-[418px] p-6 gap-0 mb-2">
-        
+
         <!-- Heading -->
         <h1 class="mb-2 text-xl font-bold">Reset password</h1>
-
+        {{#if done}}
+        <p class="mb-4 opacity-40">Your password has been update. You can now
+            <a class="!opacity-100 bold text-blue-600 underline hover:text-blue-800 visited:text-purple-600"
+                href="/login">login</a>
+            using your new password!
+        </p>
+        {{else}}
+        {{#if expired}}
+        <p class="mb-4 opacity-40">Your link is expired!</p>
+        {{else}}
         <p class="mb-4 opacity-40">Enter your new password.</p>
 
         <!-- Form -->
         <form id="resetPasswordForm" class="flex flex-col gap-2" method="POST" action="/reset">
-            
-            <div>
+
+            <div class="relative">
                 <label for="password" class="sr-only form-lable">Password</label>
-                <input type="password" id="password" 
-                class="form-control bg-[#F5F5F5] w-full p-4 outline-none rounded-xl"
-                name="password" placeholder="New password" required 
-                onchange="validatePasswords()"
-                >
+                <input type="password" id="password"
+                    class="form-control bg-[#F5F5F5] w-full p-4 outline-none rounded-xl pr-10" name="password"
+                    placeholder="New password" required onchange="validatePasswords()">
+                <i class="absolute transform -translate-y-1/2 cursor-pointer far fa-eye right-5 top-1/2 opacity-30"
+                    id="togglePassword" onclick="togglePasswordVisibility(this)"></i>
             </div>
 
-            <div>
+            <div class="relative">
                 <label for="confirmPassword" class="sr-only form-lable">Confirm new password</label>
-                <input type="password" id="confirmPassword" 
-                class="form-control bg-[#F5F5F5] w-full p-4 outline-none rounded-xl"
-                name="confirmPassword" placeholder="Confirm new password" required 
-                oninput="validatePasswords()"
-                >
-            </div>
-            <div class="mb-3 form-check form-check-inline">
-                <input class="form-check-input" type="checkbox" 
-                id="showPassword" value="true"
-                    onchange="showPasswords(this.checked)">                
-                <label class="form-check-label opacity-40" for="showPassword">Show Passwords</label>
+                <input type="password" id="confirmPassword"
+                    class="form-control bg-[#F5F5F5] w-full p-4 outline-none rounded-xl pr-10" name="confirmPassword"
+                    placeholder="Confirm new password" required oninput="validatePasswords()">
+                <i class="absolute transform -translate-y-1/2 cursor-pointer far fa-eye right-5 top-1/2 opacity-30"
+                    id="toggleConfirmPassword" onclick="togglePasswordVisibility(this)"></i>
             </div>
 
-            {{#if message}}
+            {{#if resetMessage}}
             <div class="flex justify-start">
-                <small class="text-left text-red-600" style="text-indent: 1rem;">{{{message}}}</small>
-            </div>   
+                <small class="text-left text-red-600" style="text-indent: 1rem;">{{{resetMessage}}}</small>
+            </div>
             {{/if}}
             <input type="hidden" name="email" value="{{email}}">
             <input type="hidden" name="token" value="{{token}}">
             <!-- Submit Button -->
             <button id="update-button" type="submit"
-                class="w-full p-4 font-medium text-white bg-black text-opacity-40 rounded-2xl"
-                >
+                class="w-full p-4 font-medium text-white bg-black text-opacity-40 rounded-2xl">
                 Update
             </button>
-        
+
         </form>
 
 
@@ -61,11 +63,12 @@
 
 
         <!-- Signup Redirect -->
-        <button id="loginBtn" type="button"
-                class="w-full p-4 font-medium text-white bg-black rounded-2xl"
-                onclick="window.location.href='/login'">
-                Log in
+        <button id="loginBtn" type="button" class="w-full p-4 font-medium text-white bg-black rounded-2xl"
+            onclick="window.location.href='/login'">
+            Log in
         </button>
+        {{/if}}
+        {{/if}}
     </div>
 </div>
 
@@ -90,34 +93,43 @@
         });
     });
 
-    function process(e){
+    function process(e) {
         e.preventDefault();
         window.location.href = '/';
         return false;
     }
 
-    function showPasswords(checked){
-        let password = document.querySelector('#password');
-        let confirmPassword = document.querySelector('#confirmPassword');
-        if(checked){
-            password.type = 'text';
-            confirmPassword.type = 'text';
-        }else{
-            password.type = 'password';
-            confirmPassword.type = 'password';
+    function togglePasswordVisibility(icon) {
+        // Lấy id của icon
+        const iconId = icon.id;
+        // Lấy id của input field
+        const inputId = iconId.replace('toggle', '');
+        const inputFieldId = inputId.charAt(0).toLowerCase() + inputId.slice(1); 
+
+        const inputField = document.querySelector(`#${inputFieldId}`);
+
+        if (inputField.type === 'password') {
+            inputField.type = 'text';
+            icon.classList.remove('fa-eye');
+            icon.classList.add('fa-eye-slash');
+        } else {
+            inputField.type = 'password';
+            icon.classList.remove('fa-eye-slash');
+            icon.classList.add('fa-eye');
         }
     }
 
-    function validatePasswords(){
+
+
+    function validatePasswords() {
         let password = document.getElementById('password');
         let confirmPassword = document.getElementById('confirmPassword');
 
-        if(password.value!== confirmPassword.value){
+        if (password.value !== confirmPassword.value) {
             confirmPassword.setCustomValidity('Passwords do not match!');
             confirmPassword.reportValidity();
-        } else{
+        } else {
             confirmPassword.setCustomValidity('');
-            
         }
     }
 
