--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -17,10 +17,12 @@
                 <small id="email-error" class="hidden block text-left text-red-600" style="text-indent: 1rem;"></small>
             </div>
             <!-- Password Input -->
-            <div>
+            <div class="relative">
                 <label for="password" class="sr-only">Password</label>
-                <input type="text" id="password" class="form-control bg-[#F5F5F5] w-full p-4 outline-none rounded-xl"
+                <input type="password" id="password" class="form-control bg-[#F5F5F5] w-full p-4 outline-none rounded-xl"
                     name="password" placeholder="Password">
+                    <i class="absolute transform -translate-y-1/2 cursor-pointer far fa-eye right-5 top-1/2 opacity-30"
+                        id="togglePassword" onclick="togglePasswordVisibility(this)"></i>
                 <small id="password-error" class="hidden block text-left text-red-600" style="text-indent: 1rem;"></small>
             </div>
 
@@ -87,6 +89,27 @@
             }
         });
     });
+
+    function togglePasswordVisibility(icon) {
+        // Lấy id của icon
+        const iconId = icon.id;
+        // Lấy id của input field
+        const inputId = iconId.replace('toggle', '');
+        const inputFieldId = inputId.charAt(0).toLowerCase() + inputId.slice(1); 
+
+        const inputField = document.querySelector(`#${inputFieldId}`);
+
+        if (inputField.type === 'password') {
+            inputField.type = 'text';
+            icon.classList.remove('fa-eye');
+            icon.classList.add('fa-eye-slash');
+        } else {
+            inputField.type = 'password';
+            icon.classList.remove('fa-eye-slash');
+            icon.classList.add('fa-eye');
+        }
+    }
+
 
 async function validateForm(event) {
         event.preventDefault();
