--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -1168,6 +1168,14 @@ video {
   font-weight: 600;
 }
 
+.uppercase {
+  text-transform: uppercase;
+}
+
+.lowercase {
+  text-transform: lowercase;
+}
+
 .leading-5 {
   line-height: 1.25rem;
 }
